// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots actions button 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1x8hi92=""
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      data-css-1997kh1=""
    >
      As a button
    </span>
  </div>
</div>
`;

exports[`Storyshots actions button w/ icon button 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-64l86f=""
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      data-css-13bnfv4=""
    >
      As a button
    </span>
    <div
      className="css-index--iconcontainer-18578c2"
      onClick={[Function]}
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots actions just icon button 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1fxgkih=""
  >
    <span
      data-css-13bnfv4=""
    >
      As a button
    </span>
    <div
      className="css-index--iconcontainer-18578c2"
      onClick={[Function]}
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots actions link 1`] = `
<div
  data-css-claeju=""
>
  <a
    data-css-1x8hi92=""
    href="https://duckduckgo.com/"
  >
    <span
      data-css-1997kh1=""
    >
      As a link
    </span>
  </a>
</div>
`;

exports[`Storyshots actions link with target 1`] = `
<div
  data-css-claeju=""
>
  <a
    data-css-1x8hi92=""
    href="https://duckduckgo.com/"
    target="_blank"
  >
    <span
      data-css-1997kh1=""
    >
      Opens in new window
    </span>
  </a>
</div>
`;

exports[`Storyshots appearance accent 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-47hvh8=""
  >
    <span
      data-css-1997kh1=""
    >
      accent
    </span>
  </div>
</div>
`;

exports[`Storyshots appearance basic 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1n5vxb9=""
  >
    <span
      data-css-1997kh1=""
    >
      basic
    </span>
  </div>
</div>
`;

exports[`Storyshots appearance bright 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-itkkn2=""
  >
    <span
      data-css-1997kh1=""
    >
      bright
    </span>
  </div>
</div>
`;

exports[`Storyshots error default 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-gs5gu0=""
  >
    <span
      data-css-1997kh1=""
    >
      I have a problem
    </span>
  </div>
</div>
`;

exports[`Storyshots error focusable 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1j6s7i0=""
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      data-css-1997kh1=""
    >
      I have a problem
    </span>
  </div>
</div>
`;

exports[`Storyshots icon accent medium 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-cakr6m=""
  >
    <span
      data-css-13bnfv4=""
    >
      With Icon
    </span>
    <div
      className="css-index--iconcontainer-sbo4va"
      onClick={[Function]}
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots icon accent small 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1swczt7=""
  >
    <span
      data-css-13bnfv4=""
    >
      With Icon
    </span>
    <div
      className="css-index--iconcontainer-skvh8n"
      onClick={[Function]}
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots icon basic medium 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1fxgkih=""
  >
    <span
      data-css-13bnfv4=""
    >
      With Icon
    </span>
    <div
      className="css-index--iconcontainer-sbo4va"
      onClick={[Function]}
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots icon basic small 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1g26r3r=""
  >
    <span
      data-css-13bnfv4=""
    >
      With Icon
    </span>
    <div
      className="css-index--iconcontainer-skvh8n"
      onClick={[Function]}
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots icon bright medium 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1uxvgmp=""
  >
    <span
      data-css-13bnfv4=""
    >
      With Icon
    </span>
    <div
      className="css-index--iconcontainer-sbo4va"
      onClick={[Function]}
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots icon bright small 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-psmlat=""
  >
    <span
      data-css-13bnfv4=""
    >
      With Icon
    </span>
    <div
      className="css-index--iconcontainer-skvh8n"
      onClick={[Function]}
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots isPressed button 1`] = `
<div
  data-css-claeju=""
>
  <div
    aria-pressed={true}
    data-css-1idd5sa=""
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      data-css-1997kh1=""
    >
      As a button
    </span>
  </div>
</div>
`;

exports[`Storyshots isPressed button w/ icon button 1`] = `
<div
  data-css-claeju=""
>
  <div
    aria-pressed={true}
    data-css-33sfcu=""
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      data-css-13bnfv4=""
    >
      As a button
    </span>
    <div
      className="css-index--iconcontainer-18578c2"
      onClick={[Function]}
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots isPressed link 1`] = `
<div
  data-css-claeju=""
>
  <a
    aria-pressed={true}
    data-css-1idd5sa=""
    href="https://duckduckgo.com/"
  >
    <span
      data-css-1997kh1=""
    >
      As a link
    </span>
  </a>
</div>
`;

exports[`Storyshots long string 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1n5vxb9=""
  >
    <span
      data-css-1997kh1=""
    >
      This is the string that goes on forever and always. There really isn't an end. Wow.
    </span>
  </div>
</div>
`;

exports[`Storyshots long with icon 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1fxgkih=""
  >
    <span
      data-css-13bnfv4=""
    >
      This is the string that goes on forever and always. There really isn't an end. Wow.
    </span>
    <div
      className="css-index--iconcontainer-sbo4va"
      onClick={[Function]}
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots size medium 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1n5vxb9=""
  >
    <span
      data-css-1997kh1=""
    >
      medium
    </span>
  </div>
</div>
`;

exports[`Storyshots size small 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-uqnvqs=""
  >
    <span
      data-css-1997kh1=""
    >
      small
    </span>
  </div>
</div>
`;
